Under allow-unless-denied every unlisted host is an inspected read, minted from a run CA
      A host no line names was an opaque, writable, unlogged tunnel under
      `allow-unless-denied`, the two things inspection buys given up for every
      host outside the narrowing set. It is now inspected and `read`: GET and
      HEAD without a body, every request in the audit log, every write refused
      with its reason and next step. The profile runs deny-unless-allowed's
      fold and adds the public default to it, so every line is consulted —
      `deny defaults` clears the map and `tunnel` names a host that must stay
      opaque — and the resolver's one special case for the profile is gone.
      The tunnel hosts are the exception set, kept in the digest and printed;
      the profile line reads `default: public HTTPS read`. A denial pattern
      forms from a whole-host or `read` deny, since an unlisted host holds
      `read` and nothing else; a `tunnel` deny takes nothing from it and is
      warned as any deny matching nothing is. The hostile evaluator answers an
      unlisted host's request against `read` at the root.

      A host nobody listed has no name in a leaf minted at launch, so the
      proxy mints one at each host's first CONNECT, from a CA minted for the
      run: trusted by that session alone through a bundle and JDK store
      assembled per run, written to `run-<suffix>/agent-egress-proxy/
      allow-unless-denied/` on the host, mounted at the same profile-named
      path in the proxy, and removed with the run. The project CA never
      enters the container; what a compromised proxy could mint outlives no
      run and is honoured by no other session, and what it gains during one
      is a leaf for a tunnel host. Minted leaves are kept least-recently-used
      up to 256, since a wildcard DNS name would otherwise let the sandbox
      mint until the proxy's heap, and with it the session's egress, is gone.
      The material a proxy sta